// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="root rootFieldLayoutVertical  "
>
  <ForwardRef(withForwardedRef(WithProviderContextComponent))
    id="test-id"
    inFormLayout={true}
    label="Text field"
    layout="vertical"
  />
</div>
`;

exports[`rendering renders correctly with auto label width 1`] = `
<div
  className="root rootFieldLayoutHorizontal  hasRootLabelWidthAuto"
  id="test-id"
>
  <ForwardRef(withForwardedRef(WithProviderContextComponent))
    id="test-id"
    inFormLayout={true}
    label="Text field"
    layout="horizontal"
  />
</div>
`;

exports[`rendering renders correctly with custom label width 1`] = `
<div
  className="root rootFieldLayoutHorizontal  hasRootLabelWidthCustom"
  id="test-id"
  style={
    Object {
      "--rui-custom-label-width": "300px",
    }
  }
>
  <ForwardRef(withForwardedRef(WithProviderContextComponent))
    id="test-id"
    inFormLayout={true}
    label="Text field"
    layout="horizontal"
  />
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="root rootFieldLayoutVertical  "
>
  <ForwardRef(withForwardedRef(WithProviderContextComponent))
    id="test-id-1"
    inFormLayout={true}
    label="Text field 1"
    layout="vertical"
  />
  <ForwardRef(withForwardedRef(WithProviderContextComponent))
    id="test-id-2"
    inFormLayout={true}
    label="Text field 2"
    layout="vertical"
  />
  <ForwardRef(withForwardedRef(WithProviderContextComponent))
    id="test-id-3"
    inFormLayout={true}
    label="Text field 3"
    layout="vertical"
  />
</div>
`;
